[package]
name = "kayak_ui"
description = "A UI library built using the bevy game engine!"
version = "0.3.0"
edition = "2021"
resolver = "2"
authors = ["John Mitchell"]
homepage = "https://github.com/StarArawn/kayak_ui"
repository = "https://github.com/StarArawn/kayak_ui"
license-file = "LICENSE"
exclude = ["assets/*", "screenshots/*", "book"]

[workspace]
members = ["kayak_ui_macros", "kayak_font"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.10", default-features = false, features = ["bevy_render", "bevy_sprite", "bevy_asset", "bevy_winit", "bevy_core_pipeline", "bevy_ui"] }
bytemuck = "1.12"
dashmap = "5.4"
kayak_font = { path = "./kayak_font", version = "0.3" }
morphorm = "0.3"
kayak_ui_macros = { path = "./kayak_ui_macros", version = "0.3" }
indexmap = "1.9"
log = "0.4"
bitflags = "1.3.2"
reorder = "2.1"
resources = "1.1"
instant = "0.1"
bevy_svg = { git = "https://github.com/StarArawn/bevy_svg", rev = "9a14eccf680b7fa98f6494fc10e8aaa5931de5c8", default-features = false }
interpolation = { version = "0.2" }
usvg = "0.27"
fancy-regex = "0.11.0"

[dev-dependencies]
fastrand = "1.8"
bevy-inspector-egui = "0.18"
bevy = { version = "0.10", default-features = true }

[[example]]
name = "tabs"
path = "examples/tabs/tabs.rs"

[[example]]
name = "todo"
path = "examples/todo/todo.rs"
