[package]
name = "kayak_ui"
description = "A UI library built using the bevy game engine!"
version = "0.5.0"
edition = "2021"
resolver = "2"
authors = ["John Mitchell"]
homepage = "https://github.com/StarArawn/kayak_ui"
repository = "https://github.com/StarArawn/kayak_ui"
license-file = "LICENSE"
exclude = ["assets/*", "screenshots/*", "book"]

[workspace]
members = ["kayak_ui_macros", "kayak_font"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.12", default-features = false, features = ["bevy_render", "bevy_asset", "bevy_winit", "bevy_core_pipeline"] }
bevy_svg = { version="0.12", default-features = false }
bitflags = "1.3.2"
bytemuck = "1.12"
dashmap = "5.4"
fancy-regex = "0.11.0"
indexmap = "1.9"
instant = "0.1"
interpolation = { version = "0.2" }
kayak_font = { path = "./kayak_font", version = "0.5" }
kayak_ui_macros = { path = "./kayak_ui_macros", version = "0.5" }
log = "0.4"
morphorm = "0.3"
reorder = "2.1"
resources = "1.1"
usvg = "0.27"
uuid = { version = "1.3", features = ["v4"] }

[dev-dependencies]
fastrand = "1.8"
bevy-inspector-egui = "0.21"
bevy = { version = "0.12", default-features = true }

[[example]]
name = "tabs"
path = "examples/tabs/tabs.rs"

[[example]]
name = "todo"
path = "examples/todo/todo.rs"

[package.metadata.docs.rs]
features = ["bevy/x11"]
