[package]
name = "bevy_kayak_renderer"
version = "0.0.1"
edition = "2021"

[dependencies]
bytemuck = "1.7.2"
kayak_font = { path = "../kayak_font" }
serde = "1.0"
serde_json = "1.0"
serde_path_to_error = "0.1"

[dependencies.bevy]
version = "0.7.0"
default-features = false
features = [
    "bevy_render",
    "bevy_sprite",
    "bevy_core_pipeline"
]
