[package]
name = "bevy_kayak_ui"
version = "0.0.1"
edition = "2021"

[dependencies]
bytemuck = "1.7.2"
bevy = { git = "https://github.com/bevyengine/bevy", rev = "50b3f27a767e3b538694d5e7b3ccfdffca647f1b" }
bevy_crevice = { git = "https://github.com/bevyengine/bevy", rev = "50b3f27a767e3b538694d5e7b3ccfdffca647f1b" }
kayak_core = { path = "../kayak_core" }
kayak_font = { path = "../kayak_font" }
serde = "1.0"
serde_json = "1.0"
serde_path_to_error = "0.1"
