[package]
name = "kayak_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
bevy_renderer = ["bevy", "kayak_font/bevy_renderer"]

[dependencies]
as-any = "0.2"
bevy = { version = "0.6.0", optional = true }
desync = { version = "0.7" }
flo_rope = { version = "0.1" }
futures = { version = "0.3" }
kayak_font = { path = "../kayak_font" }
kayak_render_macros = { path = "../kayak_render_macros" }
morphorm = { git = "https://github.com/geom3trik/morphorm", rev = "1243152d4cebea46fd3e5098df26402c73acae91" }
resources = "1.1"
uuid = { version = "0.8", features = ["v4"] }
