[package]
name = "kayak_font"
version = "0.1.0"
edition = "2021"

[features]
default = ["bevy_renderer"]
bevy_renderer = ["bevy"]

[dependencies]
anyhow = { version = "1.0" }
nanoserde = "0.1.30"
unicode-segmentation = "1.10.0"

# Provides UAX #14 line break segmentation
xi-unicode = "0.3"

bevy = { git = "https://github.com/bevyengine/bevy", rev="1914a3f288a812667f735ee9e7806cf1560dacc0", optional = true, default-features = false, features = ["bevy_asset", "bevy_render", "bevy_core_pipeline"] }

[dev-dependencies]
bevy = { git = "https://github.com/bevyengine/bevy", rev="1914a3f288a812667f735ee9e7806cf1560dacc0" }
bytemuck = "1.12.0"
