[package]
name = "kayak_font"
description = "An SDF font renderer for Kayak UI and the Bevy game engine"
version = "0.5.0"
edition = "2021"
resolver = "2"
authors = ["John Mitchell"]
homepage = "https://github.com/StarArawn/kayak_ui"
repository = "https://github.com/StarArawn/kayak_ui"
license-file = "../LICENSE"
exclude = ["assets/*"]

[features]
default = ["bevy_renderer"]
bevy_renderer = ["bevy"]

[dependencies]
anyhow = { version = "1.0" }
thiserror = "1.0"
nanoserde = "0.1.32"
unicode-segmentation = "1.10.0"
num = "0.4"
num-derive = "0.3"
num-traits = "0.2"
ttf-parser = "0.17"
image = "0.24"

# Provides UAX #14 line break segmentation
xi-unicode = "0.3"

bevy = { version = "0.13", optional = true, default-features = false, features = ["bevy_asset", "bevy_render", "bevy_core_pipeline"] }

[dev-dependencies]
bevy = { version = "0.13", default-features = false }
bytemuck = "1.12.0"

[package.metadata.docs.rs]
features = ["bevy/x11"]
