[package]
name = "kayak_widgets"
version = "0.1.0"
edition = "2021"
resolver = "2"

[features]
default = []
bevy_renderer = ["bevy", "kayak_ui/bevy_renderer"]

[dependencies]
kayak_ui = { path = "../", version = "0.1.0" }
bevy = { git = "https://github.com/bevyengine/bevy", rev = "9a16a4d01830297987db40b45f03382ed3acad62", optional = true }
